[package]
name = "nft-upload-server"
version = "0.2.0"
edition = "2021"

[dependencies]
# Web フレームワーク
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# JSON シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"

# ログ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ファイルシステム
tokio-util = { version = "0.7", features = ["io"] }

# Database (SQLite)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# UUID生成
uuid = { version = "1.0", features = ["v4"] }

# 時刻
chrono = { version = "0.4", features = ["serde"] }

# SHA256ハッシュ
sha2 = "0.10"
hex = "0.4"

# Base32エンコーディング（stable_id生成用）
base32 = "0.4"

# ランダム生成
rand = "0.8"

# 画像処理（サムネイル生成）
image = "0.25"
